-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
None
-
-
7a14d2ab9 (dev), d081a35b3 (6.7)
MacOS 14.1 / Linux Ubuntu 22.04
Qt Creator 12.0.0
Qt Version: (Qt 6.7.0 / 2023-11-13 / sha1: eadc7461ca268e97d9cec885cee9c5a59cc365f8)
Steps to reproduce:
- Open and run Document Viewer example.
- Open obj file.
- Open txt or json file.
- Open obj file again.
Expected: The file is opened.
Actual: The app crashes
Reproducibility: 100%
- is cloned by
-
QTBUG-119176 [DocumentViewer] Content of model file could not be viewed in the app
-
- Closed
-
- relates to
-
QTQAINFRA-5914
Qt Test Attack - Q4, 2023
-
- Open
-
-
QTBUG-121780 [DocumentViewer] Application crashes on closing when opening any file after a model file
-
- Closed
-